Game_attributes e tower_system
Atributos das estruturas, configurações globais do jogo, sistema de escolha e spawn de torres no grid

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES
   src/stb_image.cpp
   src/glad.c
   src/model_loader.cpp
+  src/tower_system.cpp
 )
 
 cmake_minimum_required(VERSION 3.5.0)
