--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
   src/glad.c
   src/model_loader.cpp
   src/tower_system.cpp
+  src/hud.cpp
 )
 
 cmake_minimum_required(VERSION 3.5.0)
